# batmon

./: Cargo.toml  README.md  batmon.service  config.toml
.github/workflows/: release.yaml  rust.yaml
src/: args.rs  main.rs  priority.rs
src/batstream/: mod.rs  sysfs.rs  udev.rs  udev_bat.rs
src/batstream/acpi/: acpi_event.rs  acpi_ids.rs  error.rs  mod.rs
src/batstream/polling/: file_poll.rs  mod.rs
src/notif/: logger.rs  mod.rs  notify.rs
