[package]
name = "batmon"
version = "0.1.0"
edition = "2021"
authors = ["rupansh <rupanshsekar@hotmail.com>"]
license = "MPL-2.0"
description = "Just another battery monitor for Linux"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounded-integer = { version = "0.5.7", features = ["std", "types"] }
futures-lite = "1.13.0"
tokio-udev = "0.9.1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "net", "time", "fs", "io-util"]}
const_format = "0.2.31"
pin-project-lite = "0.2.14"
notify-rust = "4.8.0"
clap = { version = "4.5.9", features = ["derive"] }
netlink-proto = "0.11.3"
netlink-packet-generic = "0.3.3"
netlink-packet-core = "0.7.0"
futures-channel = "0.3.28"
arrayvec = "0.7.4"
netlink-packet-utils = "0.5.2"
env_logger = "0.10.2"
thiserror = "1.0.55"
bytemuck = { version = "1.16.1", features = ["derive", "must_cast"] }